# robot_gazebo_simulation

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtle_sim_project/lib/turtle_sim_project/: turtle_controller_node  turtle_spawner_node
install/turtle_sim_project/share/turtle_sim_project/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/custom_interfaces/: CMakeLists.txt
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/rviz/: my_robot.rviz
src/my_robot_bringup/worlds/: test_world.world
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/rviz/: arm.rviz
src/my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro  standalone_arm.urdf.xacro
src/turtle_sim_project/: CMakeLists.txt
src/turtle_sim_project/logs/: log_file.txt
src/turtle_sim_project/src/: turtle_controller_node.cpp  turtle_spawner.cpp
(+55 files in other folders)
